@@ -9,7 +9,7 @@ use RDF::aREF;
 use RDF::aREF::Encoder;
 use RDF::NS;
 
-our $VERSION = '0.16';
+our $VERSION = '0.19';
 
 with 'Catmandu::RDF';
 with 'Catmandu::Importer';
@@ -30,7 +30,8 @@ has encoder => (
     is      => 'ro',
     lazy    => 1,
     builder => sub {
-        RDF::aREF::Encoder->new( ns => $_[0]->ns );
+        my $ns = $_[0]->ns;
+        RDF::aREF::Encoder->new( ns => (($ns // 1) ? $ns : { }) );
     }
 );
 
@@ -75,10 +76,15 @@ sub _rdf_stream {
     if ($self->url) {
         $parser->parse_url_into_model( $self->url, $model );
     } else {
-        if (defined $self->file and !$self->type) { 
+        my $from_scalar = (ref $self->file // '') eq 'SCALAR';
+        if (!$self->type and $self->file and !$from_scalar) {
             $parser = $parser->guess_parser_by_filename($self->file);
         }
-        $parser->parse_file_into_model( $self->base, $self->file // $self->fh, $model );
+        if ($from_scalar) {
+            $parser->parse_into_model( $self->base, ${$self->file}, $model );
+        } else {
+            $parser->parse_file_into_model( $self->base, $self->file // $self->fh, $model );
+        }
     }
     
     return $model->as_stream;
@@ -95,7 +101,7 @@ Catmandu::Importer::RDF - parse RDF data
 
 Command line client C<catmandu>:
 
-    catmandu convert RDF --url http://d-nb.info/1001703464 to YAML
+    catmandu convert RDF --url http://d-nb.info/gnd/4151473-7 to YAML
     catmandu convert RDF --file rdfdump.ttl to JSON
 
 In Perl code:
@@ -152,7 +158,7 @@ See L<Catmandu::Importer>.
 
 =head1 SEE ALSO
 
-L<RDF::Trine::Store>, L<RDF::Trine::Parsers>
+L<RDF::Trine::Store>, L<RDF::Trine::Parser>
 
 =encoding utf8
 
