@@ -1,54 +1,36 @@
 use strict;
 use warnings;
 use Test::More;
+use Catmandu -all;
 
 my $pkg;
 BEGIN { use_ok $pkg = 'Catmandu::Importer::RDF'; }
 require_ok $pkg;
+isa_ok $pkg->new, $pkg;
 
-my ($importer, $input);
+my $aref = importer('YAML', file => 't/example.yml')->first;
 
-SKIP: {
-    my $importer = $pkg->new(file => 't/example.ttl', ns => 0);
-    isa_ok $importer, $pkg;
-
-    skip "", 1; # FIXME
-    my $input = $importer->to_array;
-    is_deeply $input, [
-       {
-         'http://example.org' => {
-            a => [ '<http://www.w3.org/2000/01/rdf-schema#Resource>' ],
-            'http://example.org/foo' => [ 'bar@en' ],
-            'http://purl.org/dc/elements/1.1/title' => [ 'BAR@' ],
-            'http://purl.org/dc/elements/1.1/extent' => [ '42^<http://www.w3.org/2001/XMLSchema#integer>' ],
-         },
-       }
-    ], 'disable namespace prefixes';
-}
+is_deeply importer('RDF', ns => 0, file => 't/example.ttl')->first, {
+     'http://example.org' => {
+        a => [ '<http://www.w3.org/2000/01/rdf-schema#Resource>' ],
+        'http://example.org/foo' => [ "b\x{e4}r\@en" ],
+        'http://purl.org/dc/elements/1.1/title' => [ "B\x{c4}R@" ],
+        'http://purl.org/dc/elements/1.1/extent' => [ '42^<http://www.w3.org/2001/XMLSchema#integer>' ],
+     },
+   }, 'disable namespace prefixes';
 
 foreach my $file (qw(t/example.ttl t/example.rdf)) {
-    $importer = $pkg->new(file => $file, ns => 1);
-    $input = $importer->to_array;
-
-    is_deeply $input, [ {
-         'http://example.org' => {
-            a         => [ 'rdfs_Resource' ],
-            dc_title  => [ 'BAR@' ],
-            dc_extent => [ '42^xs_integer' ],
-            'http://example.org/foo' => [ 'bar@en' ],
-         },
-       }
-    ], "default namespace prefixes ($file)";
+    is_deeply importer('RDF', file => $file, ns => 1)->first,
+              $aref, "default namespace prefixes ($file)";
 }
 
-# TODO: check round-trip
-=cut
-use Catmandu::Exporter::RDF;
-my $out = "";
-my $exporter = Catmandu::Exporter::RDF->new(file => \$out, type => 'ttl');
-$exporter->add($input->[0]);
-$exporter->commit;
-note $out;
-=cut
+{
+    use utf8;
+    my $ttl = '<http://example.org> <http://example.org/foo> "bär"@en .';
+    my $importer = importer('RDF', type => 'turtle', file => \$ttl);    $aref = $importer->first;
+    $aref = $importer->first;
+    is_deeply $aref->{'http://example.org'}->{'http://example.org/foo'},
+        [ 'bär@en' ], 'import from scalar with Unicode';
+}
 
 done_testing;
