@@ -1,6 +1,8 @@
 Changelog for Catmandu-RDF
 
 {{$NEXT}}
+  - disable namespaces with ns=0 (issue #8) 
+  - support importing from string reference
 
 0.18  2014-10-14 12:53:01 CEST
   - add field _url on import from url (issue #9)
